--- a/readme.org
+++ b/readme.org
@@ -23,7 +23,7 @@ That's it.
 
 For instance, the identity monad is:
 
-1. Bind: (lambda (f a) (f a))
+1. Bind: (lambda (a f) (f a))
 2. Unit: (lambda (a) a)
 
 Not too bad, eh?
