--- a/readme.org
+++ b/readme.org
@@ -12,7 +12,7 @@ Ok, well not.
 
 Monads are types that have:
 
-1. A binding function of the form: a -> (a -> b) -> M b
+1. A binding function of the form: a -> (a -> M b) -> M b
 2. A unit function: a -> M a
 
 That's it.
